fix css alignment

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -483,6 +483,7 @@ pre {
 }
 .custom-mdl-card h4 {
   margin-bottom:0;
+  text-align: center;
 }
 .custom-mdl-card p {
   margin-top:5px;
